--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "worker:dev": "tsx watch workers/index.ts",
     "worker:start": "tsx workers/index.ts",
+    "api:dev": "tsx watch api/stats-sse.ts",
+    "api:start": "tsx api/stats-sse.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev"
   },
@@ -15,6 +17,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "prisma": "^7.2.0",
